--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
         </main>
         <footer>
-            <p>&copy; 2024 Carrier| Midea</p>
+            <p>Muchas gracias por tu feedback, nos ayuda a mejorar!</p>
+            <p>&copy; 2024 Carrier | Midea</p>
         </footer>
     </div>
     <script src="script.js"></script>
